# rapp-god

./: .gitignore  .nojekyll  COMPONENT_LICENSES.md  GRAIL_SCAN.md  MONOREPO.md  README.md  WORKSPACE.json  build_god.py  check.sh  index.html  manifest.json  registry.json  sync.sh
archive/generations/local-first-tools/localFirstTools/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
authority/: README.md
catalog/: README.md  (+18 more)
products/ecosystem/lisppy/: .gitignore  CHANGELOG.md  LICENSE  LISPY.md  MANIFEST.in  README.md  core-stdlib.lisp  cubby.json  effect_executor.py  lisp.py  rapp-compliance.json  setup.cfg
products/ecosystem/lisppy/.github/scripts/: verify_testpypi.py
products/ecosystem/lisppy/.github/workflows/: publish.yml  tests.yml
products/ecosystem/lisppy/agents/: lispy_runtime_agent.py
products/ecosystem/lisppy/docs/: RAPP_COMPLIANCE.md  evolution-guide.html
products/ecosystem/lisppy/examples/: agent-profile.lisp  channel-stats.lisp  data-slosh.lisp  frame-eval.lisp  hello.lisp  hosted-flow.py  manifest.json  trending.lisp
products/ecosystem/lisppy/examples/mars-barn/: browser-scraper.lisp  gauntlet-runner.lisp
products/ecosystem/lisppy/lisppy/: __init__.py  __main__.py  cli.py  contracts.py  demo.py  effects.py  host.py  mars.py
products/ecosystem/lisppy/lisppy/data/: rappterbook-stdlib.lisp  stdlib.lisp
products/ecosystem/lisppy/lisppy/data/registered/: hosted-governor.lisp  mars-colony-governor.lisp
products/ecosystem/lisppy/spec/mars/: governor-contract.json  governor-vectors.json
products/ecosystem/lisppy/spec/v1/: CONFORMANCE.md  conformance.json
products/ecosystem/lisppy/spec/v2/: README.md  model.json
products/ecosystem/lisppy/tests/: support.py  test_capabilities.py  test_cli.py  test_conformance.py  test_contracts.py  test_doctor_v3.py  test_effect_executor.py  test_effects.py  test_examples.py  test_host.py  test_hosted_governor.py  test_limits.py  test_mars_contract.py  test_package.py  test_publish_verify.py  test_rapp_compliance.py  test_reader.py  test_repl.py  test_sequences.py  test_spec_v2_draft.py  test_values.py  test_vm.py  test_worker.py
products/ecosystem/lisppy/tools/: verify_rapp_compliance.py
products/openrappter/core/python/: pyproject.toml
products/openrappter/core/python/nanorappter/: __init__.py  examples.py
products/openrappter/core/python/openrappter/: __init__.py  _bounded_workers.py  brainstem.py  clawhub.py  cli.py  rappterhub.py
products/openrappter/core/python/scripts/: gateway_token_smoke.py
products/openrappter/core/python/tests/: test_agent_chain.py  test_basic_agent.py  test_brainstem_compliance.py  test_broadcast.py  test_channels_webhook.py  test_cli.py  test_code_review.py  test_computer_use_security.py  test_e2e_provider_channel_gateway.py  test_exec_safety.py  test_gateway_observability.py  test_gateway_server.py  test_git_agent.py  test_imessage_core.py  test_imessage_rpc.py  test_memory_agents.py  test_module_exports.py  test_openrappter_brainstem.py  test_pokemon_agent.py  test_provider_channel_bridge.py  test_provider_openai_compatible.py  test_showcase_accelerator.py  test_showcase_agent_compiler.py  test_showcase_inception_stack.py  test_showcase_infinite_regression.py  test_showcase_living_dashboard.py  test_showcase_memory_recall.py  test_showcase_persistence_vault.py  test_showcase_stream_weaver.py  test_showcase_swarm_debugger.py  test_storage_sqlite_adapter.py  test_subagent.py  test_web_agent.py
products/rappterbook/components/rappterbook-agent/python/: pyproject.toml
products/storefronts/RAPP_Desktop/src-tauri/: Cargo.toml  tauri.conf.json
products/storefronts/RAPP_Desktop/src-tauri/src/: main.rs
services/rappterhub/cli/: pyproject.toml
services/rappterhub/cli/rappterhub/: __init__.py  cli.py
src/runtime/rapp-cli/: .gitignore  README.md  SECURITY.md  pyproject.toml
src/runtime/rapp-cli/.github/workflows/: ci.yml
src/runtime/rapp-cli/src/rapp_cli/: __init__.py  agent_files.py  cli.py  client.py  commands.py  config.py  errors.py  filesystem.py  identity.py  jsonio.py  output.py  provider.py  rar.py  release_train.py  runtime.py  twin_hatch.py  twins.py
src/runtime/rapp-cli/tests/: test_cli.py  test_client.py  test_config.py  test_filesystem.py  test_identity.py  test_jsonio.py  test_output.py  test_provider.py  test_rar.py  test_release_train.py  test_runtime.py  test_twin_hatch.py  test_twins.py
src/workflows/rapp-dynamic-workflows/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/workflows/rapp-dynamic-workflows/.github/workflows/: ci.yml
src/workflows/rapp-dynamic-workflows/docs/: architecture.md
src/workflows/rapp-dynamic-workflows/examples/: 01_hello_agent.py  02_parallel_review.py  03_pipeline_migration.py  04_judge_panel.py  05_budget_loop.py  06_resume_demo.py  README.md
src/workflows/rapp-dynamic-workflows/rdw/: __init__.py  budget.py  cli.py  engine.py  errors.py  journal.py  patterns.py  progress.py  runtime.py  schema.py  transcripts.py
src/workflows/rapp-dynamic-workflows/tests/: conftest.py  test_budget.py  test_cli.py  test_engine.py  test_journal.py  test_patterns.py  test_progress.py  test_runtime.py  test_schema.py  test_transcripts.py  test_usage_stats.py
src/workflows/rapp-ultracode/: .gitignore  DISCLAIMER.md  README.md  SECURITY.md  pyproject.toml
src/workflows/rapp-ultracode/.github/workflows/: ci.yml
src/workflows/rapp-ultracode/docs/: architecture.md
src/workflows/rapp-ultracode/integrations/rapp/: ultracode_factory_agent.py
src/workflows/rapp-ultracode/schemas/: rapp-ultracode-plan-1.0.schema.json
src/workflows/rapp-ultracode/scripts/: export_schema.py
src/workflows/rapp-ultracode/src/rapp_ultracode/: __init__.py  api.py  assets.py  canonical.py  cli.py  errors.py  executor.py  models.py  paths.py  planner.py  progress.py  repository.py  runtime.py  store.py  tools.py  worker.py
src/workflows/rapp-ultracode/tests/: conftest.py  test_api.py  test_assets.py  test_cli.py  test_executor.py  test_factory_agent.py  test_models.py  test_repository.py  test_runtime.py  test_store.py  test_tools.py
(+24648 files in other folders)
