[metadata]
name = rappterbook-lispy-runtime
version = attr: lisp.VERSION
description = A zero-dependency Lisp runtime for deterministic agent orchestration
author = Kody Wildfeuer
author_email = kody-w@users.noreply.github.com
keywords = lisp, scheme, interpreter, artificial intelligence, agent orchestration
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/kody-w/lisppy
project_urls =
    Repository = https://github.com/kody-w/lisppy
    Changelog = https://github.com/kody-w/lisppy/blob/main/CHANGELOG.md
    Issues = https://github.com/kody-w/lisppy/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Developers
    Topic :: Software Development :: Interpreters
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.8
packages = lisppy
py_modules =
    lisp
    effect_executor
include_package_data = True

[options.package_data]
lisppy =
    data/stdlib.lisp
    data/registered/*.lisp
    data/sample-state/*.json
    data/sample-state/memory/*.md
    data/contracts/lispy-core@1/*
    data/mars/*.json

[options.entry_points]
console_scripts =
    lispy = lisppy.cli:main
