[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rappterhub"
version = "0.1.0"
description = "CLI for RappterHub - the openrappter agent registry"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.9",
]
authors = [
    { name = "Kody W" }
]
keywords = ["ai", "agent", "registry", "openrappter", "rappterhub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
rappterhub = "rappterhub.cli:app"

[project.urls]
Homepage = "https://rappterhub.dev"
Repository = "https://github.com/rappterhub/rappterhub"

[tool.hatch.build.targets.wheel]
packages = ["rappterhub"]
