[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapp-cli"
version = "0.1.0"
description = "Headless command-line control surface for the RAPP platform."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kody Wildfeuer" }]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
test = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
rapp = "rapp_cli.cli:main"

[project.urls]
Homepage = "https://github.com/kody-w/rapp-cli"
Repository = "https://github.com/kody-w/rapp-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/rapp_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
