[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapp-dynamic-workflows"
version = "0.2.0"
description = "Deterministic multi-agent workflows for the GitHub Copilot SDK: fan-out, pipelines, budgets, and journaled resume. Inspired by Claude Code's Workflow tool."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kody Wildflower" }]
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk>=1.0.7",
    "pydantic>=2.0",
    "rich>=13.0",
]
keywords = ["copilot", "agents", "orchestration", "workflow", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/kody-w/rapp-dynamic-workflows"

[project.scripts]
rdw = "rdw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rdw"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
