[package]
name = "rapp-desktop"
version = "1.0.0"
description = "RAPP Desktop - AI Agent Production Pipeline"
authors = ["RAPP Team"]
license = "Apache-2.0"
repository = "https://github.com/kody-w/RAPP_Desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-all", "path-all", "process-all", "http-all", "notification-all", "clipboard-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
open = "5.0"
chrono = "0.4"
uuid = { version = "1.7", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
