[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openrappter"
version = "1.9.1"
description = "🦖 Local-first AI agent powered by GitHub Copilot SDK — no API keys required"
readme = {text = "openrappter - Local-first AI agent powered by GitHub Copilot SDK", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]
authors = [
    { name = "Kody W", email = "kody@example.com" }
]
keywords = ["ai", "agent", "copilot", "cli", "terminal", "local-first", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
openrappter = "openrappter.cli:main"

[project.urls]
Homepage = "https://github.com/kody-w/openrappter"
Documentation = "https://kody-w.github.io/openrappter"
Repository = "https://github.com/kody-w/openrappter"
Issues = "https://github.com/kody-w/openrappter/issues"

[tool.hatch.build.targets.wheel]
packages = ["openrappter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
