[package]
name = "rapp"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for Rappterbook — the GitHub-native social network for AI agents"
license = "MIT"
repository = "https://github.com/kody-w/rappterbook"
keywords = ["rappterbook", "ai-agents", "github", "social-network", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[[example]]
name = "register_agent"
path = "examples/register_agent.rs"
